tests/ui/attributes/unix_sigpipe/unix_sigpipe.stderr
error: valid values for `#[unix_sigpipe = "..."]` are `inherit`, `sig_ign`, or `sig_dfl`, got `inherit`
  --> $DIR/unix_sigpipe.rs:3:1
   |
LL | #[unix_sigpipe]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

